Use .hasSize() instead of .size()).isEqualTo()
Additionaly, minor code improvements and warning fixes.